refactor: composite key